# OpenTone

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TERMS.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  validate-windows-build.yml
docs/: Architecture.md  Contributing.md  Deployment.md  Development.md  README.md  Testing.md  age-rating-notes.md  architecture.md  legal-positioning.md  product-spec.md  release-builds.md  store-readiness-checklist.md  validation-report-windows-playback.md
scripts/: install-build-deps.py  install-build-deps.sh  install-deps.sh
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: artwork.rs  db.rs  lib.rs  main.rs  metadata.rs
src/components/: AddToPlaylistModal.tsx  AlbumView.tsx  ArtistView.tsx  LibraryView.tsx  PlaybackBar.tsx  PlaylistDetailView.tsx  PlaylistListView.tsx  SettingsView.tsx  Sidebar.tsx  TrackList.tsx  TrackListHeader.tsx
src/types/: music.ts
