[package]
name = "opentone"
version = "0.1.0-alpha"
description = "OpenTone — offline-first personal music library and desktop player for music you own."
authors = ["Sparsh Sam"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "opentone_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
