[package]
name = "opentone"
version = "0.3.0"
description = "OpenTone — offline-first personal music library and desktop player for music you own."
authors = ["Sparsh Sam"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "opentone_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lofty = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
